fixed faq spacing

--- a/shootspace-listings-site/assets/css/style.css
+++ b/shootspace-listings-site/assets/css/style.css
@@ -32,11 +32,13 @@ h4 {
     font-family: 'Lato', sans-serif;
     font-size: 20px;
     font-weight: bolder;
+    width: 100%;
 }
 
 h5 {
     font-family: 'Varela Round', sans-serif;
     font-size: 15px;
+    width: 100%;
 }
 
 p {
